// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Visualizer /> should render properly 1`] = `
.emotion-14 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  margin-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-8 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  overflow-y: auto;
  padding: 4px;
}

.emotion-8 .container {
  width: 12.5%;
  padding-bottom: 12.5%;
}

.emotion-3 {
  height: 0;
  position: relative;
  min-width: 100px;
  min-height: 100px;
}

.emotion-2 {
  border: 4px solid transparent;
  width: 100%;
  height: 100%;
  position: absolute;
}

.emotion-2:hover {
  border: 4px solid #ffffff;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #2e2e2e;
  overflow: hidden;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  width: 100%;
}

.emotion-11 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 2px;
  background-color: #252525;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  z-index: 10;
  opacity: 0.8;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-9 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
  padding: 8px;
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-9:hover {
  color: #73b61c;
}

.emotion-9[aria-disabled=true] {
  color: #808080;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
  padding: 8px;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-10:hover {
  color: #73b61c;
}

.emotion-10[aria-disabled=true] {
  color: #808080;
}

<div
  className="emotion-14"
>
  <div
    className="emotion-13"
  >
    <div
      className="emotion-12"
    >
      <div
        className="emotion-8"
      >
        <div
          className="container emotion-3"
        >
          <div
            className="emotion-2"
          >
            <a
              className="emotion-1"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?id=vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <img
                alt="TIFF_1MB.tiff"
                className="emotion-0"
                src="https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_650x434.jpg"
                srcSet="https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_650x434.jpg 650w, https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_512x341.jpg 512w, https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_320x213.jpg 320w"
              />
            </a>
          </div>
        </div>
        <div
          className="container emotion-3"
        >
          <div
            className="emotion-2"
          >
            <a
              className="emotion-1"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?id=XK6ra3Jl_xhtrqP0Nf8hNJ7JcIRfWXCE"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <img
                alt="TIFF_1MB.tiff"
                className="emotion-0"
                src="/icons/fallback.png"
                srcSet="/icons/fallback.png 256w, /icons/fallback_2x.png 512w, /icons/fallback_3x.png 1024w"
              />
            </a>
          </div>
        </div>
      </div>
      <div
        className="emotion-11"
      >
        <button
          aria-disabled={true}
          aria-label="Zoom Out"
          className="emotion-9"
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="circleMinus.svg"
            width={20}
          />
        </button>
        <button
          aria-label="Zoom In"
          className="emotion-10"
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="circlePlus.svg"
            width={20}
          />
        </button>
      </div>
    </div>
    <Metadata />
  </div>
</div>
`;

exports[`<Visualizer /> should render selected asset 1`] = `
.emotion-14 {
  height: 100%;
  background-color: #191919;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  margin-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  overflow-y: hidden;
}

.emotion-12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-8 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  overflow-y: auto;
  padding: 4px;
}

.emotion-8 .container {
  width: 12.5%;
  padding-bottom: 12.5%;
}

.emotion-3 {
  height: 0;
  position: relative;
  min-width: 100px;
  min-height: 100px;
}

.emotion-6 {
  border: 4px solid transparent;
  width: 100%;
  height: 100%;
  position: absolute;
}

.emotion-6:hover {
  border: 4px solid #ffffff;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #2e2e2e;
  overflow: hidden;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0 {
  width: 100%;
}

.emotion-11 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 2px;
  background-color: #252525;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  z-index: 10;
  opacity: 0.8;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-9 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
  padding: 8px;
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-9:hover {
  color: #73b61c;
}

.emotion-9[aria-disabled=true] {
  color: #808080;
}

.emotion-10 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
  padding: 8px;
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-10:hover {
  color: #73b61c;
}

.emotion-10[aria-disabled=true] {
  color: #808080;
}

.emotion-2 {
  border: 4px solid #4a90e2;
  width: 100%;
  height: 100%;
  position: absolute;
}

.emotion-2:hover {
  border: 4px solid #4a90e2;
}

<div
  className="emotion-14"
>
  <div
    className="emotion-13"
  >
    <div
      className="emotion-12"
    >
      <div
        className="emotion-8"
      >
        <div
          className="container emotion-3"
        >
          <div
            className="emotion-2"
          >
            <a
              className="emotion-1"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <img
                alt="TIFF_1MB.tiff"
                className="emotion-0"
                src="https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_650x434.jpg"
                srcSet="https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_650x434.jpg 650w, https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_512x341.jpg 512w, https://localhost:3000/api/v1/projects/89382033-bcbb-4c8f-81a9-3d0883298a81/assets/vZgbkqPftuRJ_-Of7mHWDNnJjUpFQs0C/files/category/proxy/name/image_320x213.jpg 320w"
              />
            </a>
          </div>
        </div>
        <div
          className="container emotion-3"
        >
          <div
            className="emotion-6"
          >
            <a
              className="emotion-1"
              href="/76917058-b147-4556-987a-0a0f11e46d9b/visualizer?id=XK6ra3Jl_xhtrqP0Nf8hNJ7JcIRfWXCE"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <img
                alt="TIFF_1MB.tiff"
                className="emotion-0"
                src="/icons/fallback.png"
                srcSet="/icons/fallback.png 256w, /icons/fallback_2x.png 512w, /icons/fallback_3x.png 1024w"
              />
            </a>
          </div>
        </div>
      </div>
      <div
        className="emotion-11"
      >
        <button
          aria-disabled={true}
          aria-label="Zoom Out"
          className="emotion-9"
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="circleMinus.svg"
            width={20}
          />
        </button>
        <button
          aria-label="Zoom In"
          className="emotion-10"
          onClick={[Function]}
          type="button"
        >
          <svg
            data-file-name="circlePlus.svg"
            width={20}
          />
        </button>
      </div>
    </div>
    <Metadata />
  </div>
</div>
`;
